--- a/styles.css
+++ b/styles.css
@@ -13,14 +13,17 @@
 #ifsc{
     margin-right: 70px; 
 }
+#manu{
+    margin-right: 50px;
+}
 #add{
     width:45%;
 }
 #ctx{
-    margin-right: 170px; 
+    margin-right: 170px;
 }
 #hss{
-    width: 45%; 
+    max-width: 60%; 
 }
 #city{
     margin-right: 40px;
@@ -64,7 +67,9 @@
 }
 #save{
     margin-left:620px;
-    margin-top: 100px;
+    margin-top: 70px;
+    max-width:200px ;
+  
     
     display: inline-block;
     padding: 15px 25px;
@@ -73,16 +78,16 @@
     text-align: center;
     text-decoration: none;
     outline: none;
-    color: #fff;
-    background-color: #4CAF50;
+    color:black;
+    background-color:yellow;
     border: none;
     border-radius: 15px;
-    box-shadow: 0 9px #999;
 
 }
 #discard{
     margin-left:10px;
-    margin-top: 40px;
+    margin-top: 115px;
+    max-width: 200px;
     
     display: inline-block;
     padding: 15px 25px;
@@ -91,9 +96,17 @@
     text-align: center;
     text-decoration: none;
     outline: none;
-    color: #fff;
-    background-color: #4CAF50;
+    color:black;
+    background-color: whitesmoke;
     border: none;
     border-radius: 15px;
-    box-shadow: 0 9px #999;
+}
+#port{
+    margin-left: 50px; 
+}
+#origin,#ship,#cons,#pay,#urn,#type,#bill,#channel,#import,#request,#check,#late{
+    margin-left:50px;
+}
+.port{
+    width: 300px;
 }
